# cc-monitor-control

./: AGENTS.md  Cargo.toml  README.md  build.rs  client.lua
src/: main.rs
web-ui/: package.json
web-ui/src/: App.vue
