[package]
name = "cc-monitor-control"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
